[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/deck_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=2]
[ext_resource path="res://components/cards-list/CardsList.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/map/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/lang-switcher/LangSwitcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://ai/GameAI.tscn" type="PackedScene" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="GameAI" parent="." instance=ExtResource( 7 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LangSwitcher" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MapPlaceholder" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 768.0
rect_min_size = Vector2( 0, 768 )
mouse_filter = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_top = 772.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="CardsList" parent="CanvasLayer/VBoxContainer/Control" instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="Map" parent="." instance=ExtResource( 4 )]

[node name="RaptorDeckManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 1 )

[node name="HunterDeckManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 1 )
play_side = 1
